# SecBASH

./: .bmad  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
benchmark/: __init__.py  compare.py  extract_gtfobins.py  extract_harmless.py  plots.py  report.py
docs/: aegish-flow.html  architecture.md  blog-outline.md  blog-post.md  blog-post_old.md  bmm-workflow-status.yaml  epics-v3.md  epics.md  implementation-readiness-report-2026-02-03.md  landlock-dropper-implementation.md  nfr-assessment.md  prd.md  security-hardening-scope.md  shell-state-persistence.md  tables_to_images.py  transitive-validation-architecture.md  trivial-bypass-mitigation.md  trivial-bypass-vulnerabilities.md
logs/: 2026-02-05T14-56-35+00-00_secbash-gtfobins_4EVhcoi4b8PQZehrcsXCYw.eval  2026-02-05T14-56-35+00-00_secbash-gtfobins_FEfqCxQr8X7emVRQNeYhBz.eval  2026-02-05T14-56-35+00-00_secbash-gtfobins_ZhgW8ryk5sKumja7porEne.eval  2026-02-05T14-56-35+00-00_secbash-harmless_2iCk6MP5sBkoTYDoiGsQsG.eval  2026-02-05T14-56-35+00-00_secbash-harmless_4krDfD9YDQaiW4VEfr9thb.eval  2026-02-05T14-56-35+00-00_secbash-harmless_CT4g5agLBryYmc2EbtLBkq.eval  2026-02-05T17-55-33+00-00_secbash-gtfobins-llamaguard_o3oaKTX8rHHmapk4P8WRZH.eval  2026-02-05T18-07-11+00-00_secbash-harmless-llamaguard_jzaMCbH4KyyezqT9zu3tZR.eval  2026-02-06T13-19-10+00-00_secbash-gtfobins_HYFrtQfWpm8SidHXudvGdH.eval  2026-02-06T13-19-10+00-00_secbash-gtfobins_Y8fkLtSWjsQvWLzuNXjHEu.eval  2026-02-06T13-19-10+00-00_secbash-harmless_BMqd7HksG6EZ4CjAUUDhAP.eval  (+8 more)
(+209 files in other folders)
