[project]
name = "secbash"
version = "0.1.0"
description = "LLM-powered shell with security validation"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "litellm>=1.0.0",
]

[project.scripts]
secbash = "secbash.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.12.0",
]
