[project]
name = "secbash"
version = "0.1.0"
description = "LLM-powered shell with security validation"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "litellm>=1.0.0",
    "adjusttext>=1.3.0",
]

[project.scripts]
secbash = "secbash.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "anthropic>=0.77.1",
    "datasets>=4.5.0",
    "google-genai>=1.61.0",
    "huggingface-hub>=1.3.5",
    "inspect-ai>=0.3.170",
    "matplotlib>=3.10.8",
    "openai>=2.16.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.12.0",
    "pyyaml>=6.0.3",
    "ruff>=0.9.0",
    "seaborn>=0.13.2",
]
